[project]
name = "rnacentral-mcp-server"
version = "0.1.0"
description = "An MCP server for RNAcentral, providing RNA sequence search, ID mapping, genomic context, and 2D structures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "mcp[cli]>=1.8.0",
    "click>=8.1.8",
]

[project.scripts] 
run-server = "rnacentral_sequence_search.server:main"

[tool.hatch.build.targets.wheel]
packages = "rnacentral_sequence_search"

[build-system]
   requires = ["setuptools>=45", "wheel"]
   build-backend = "setuptools.build_meta"