[project]
name = "rnacentral-mcp-server"
version = "0.1.0"
description = "An MCP server for RNAcentral, providing RNA sequence search, ID mapping, genomic context, and 2D structures."
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Andrew Green", email = "agreen@ebi.ac.uk"}]
keywords = ["rnacentral", "mcp", "rna", "bioinformatics", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "aiohttp>=3.11.18",
    "mcp[cli]>=1.8.0",
    "click>=8.1.8",
]

[project.urls]
Homepage = "https://github.com/RNAcentral/rnacentral-mcp-server"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton>=0.5",
    "linkify-it-py>=2.0",
]

[project.scripts]
run-server = "rnacentral_sequence_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["rnacentral_sequence_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"